# ministack

./: .gitignore  CHANGELOG.md  README.md  docdb-help.md  pyproject.toml
.github/workflows/: ci.yml
.kilo/plans/: refactor-documentdb-to-docker-mongo.md
ministack/: app.py
ministack/core/: router.py
ministack/services/: apigateway.py  apigateway_v1.py  cognito.py  docdb-apis.md  documentdb-apis.md  documentdb-mongo-apis.md  documentdb.md  documentdb.py  eks.py  firehose.py  lambda_svc.py  mwaa.py  rds.py
ministack/services/cloudformation/: provisioners.py
tests/: conftest.py  test_apigatewayv1.py  test_apigatewayv2.py  test_cognito_custom_auth.py  test_docdb.py  test_eks.py  test_firehose.py  test_lambda.py  test_rds.py
